fix overflow mobile

--- a/rosi.css
+++ b/rosi.css
@@ -4,7 +4,11 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    align-items: flex-start;
+    min-height: 100vh;
+
     display: flex;
     justify-content: center;
     align-items: center;
